--- a/Api/Web.config
+++ b/Api/Web.config
@@ -13,8 +13,8 @@
     <add name="AutoRenterDatabaseContext" connectionString="Server=tcp:autorenterdbserver.database.windows.net,1433;Data Source=autorenterdbserver.database.windows.net;Initial Catalog=AutoRenterDatabase;Persist Security Info=False;User ID=auto_renter_admin;Password=Marg2016Foxxy;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=15;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="MaximumFileSizeInKb" value="100"/>
-    <add key="AcceptedFileTypes" value="jpeg, gif, png" />
+    <add key="MaximumFileSizeInKb" value="200"/>
+    <add key="AcceptedFileTypes" value="jpg, gif, png, docx, pdf" />
     <add key="DisableAuthentication" value="true" />
     <add key="elmah.mvc.disableHandler" value="false" />
     <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
