--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -79,10 +79,14 @@
   <ItemGroup>
     <Compile Include="App_Start\ElmahInitializer.cs" />
     <Compile Include="AutoRenterDatabaseContext.cs" />
-    <Compile Include="Branding.cs" />
     <Compile Include="IAutoRenterDatabaseContext.cs" />
     <Compile Include="IncentiveGroup.cs" />
     <Compile Include="Location.cs" />
+    <Compile Include="Media.cs" />
+    <Compile Include="Migrations\201607201451038_CreateDatabase.cs" />
+    <Compile Include="Migrations\201607201451038_CreateDatabase.Designer.cs">
+      <DependentUpon>201607201451038_CreateDatabase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
@@ -94,6 +98,11 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201607201451038_CreateDatabase.resx">
+      <DependentUpon>201607201451038_CreateDatabase.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
