--- a/Api.Tests/Api.Tests.csproj
+++ b/Api.Tests/Api.Tests.csproj
@@ -113,20 +113,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\Login\GetUserByUsernameAndPasswordTests.cs" />
     <Compile Include="Commands\Media\GetMediaTests.cs" />
     <Compile Include="Commands\Media\SaveMediaTests.cs" />
+    <Compile Include="Commands\Reports\GetActiveRentToOwnTests.cs" />
+    <Compile Include="Commands\Vehicles\DeleteVehicleTests.cs" />
     <Compile Include="Commands\Vehicles\GetVehicleTests.cs" />
     <Compile Include="Commands\Vehicles\SaveVehicleTests.cs" />
     <Compile Include="Controllers\MediaControllerTests.cs" />
     <Compile Include="Controllers\MediaUploadControllerTests.cs" />
     <Compile Include="Controllers\VehicleControllerTests.cs" />
     <Compile Include="Commands\IncentiveGroup\GetIncentiveGroupsForLocationTests.cs" />
+    <Compile Include="Converters\ConvertHttpRequestToVehicleModelTests.cs" />
     <Compile Include="Converters\IncentiveGroupModelConverterTests.cs" />
     <Compile Include="Commands\IncentiveGroup\GetIncentiveGroupTests.cs" />
     <Compile Include="Commands\IncentiveGroup\SaveIncentiveGroupTests.cs" />
     <Compile Include="Commands\Location\GetLocationTests.cs" />
     <Compile Include="Commands\Location\GetAllLocationsTests.cs" />
     <Compile Include="Converters\HashConverterTests.cs" />
+    <Compile Include="Converters\MediaModelConverterTests.cs" />
     <Compile Include="Converters\VehicleModelConverterTests.cs" />
     <Compile Include="Converters\LocationModelConverterTests.cs" />
     <Compile Include="Commands\Location\DeleteLocationTests.cs" />
@@ -144,6 +149,7 @@
     <Compile Include="Controllers\UserControllerTests.cs" />
     <Compile Include="Converters\DataTypeConverterTests.cs" />
     <Compile Include="FakeDbSet.cs" />
+    <Compile Include="GetTestObjects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\FileUploadValidatorTests.cs" />
   </ItemGroup>
