--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -60,15 +60,23 @@
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="JWT, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\JWT.1.3.4\lib\3.5\JWT.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.IdentityModel.Logging, Version=1.0.0.127, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Logging.1.0.0\lib\net451\Microsoft.IdentityModel.Logging.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Tokens, Version=5.0.0.127, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Tokens.5.0.0\lib\net451\Microsoft.IdentityModel.Tokens.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.0.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
@@ -93,6 +101,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.20622.1351, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.2.206221351\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -109,9 +121,6 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http">
     </Reference>
@@ -177,10 +186,14 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Authorization\IJsonWebToken.cs" />
-    <Compile Include="Authorization\JsonWebToken.cs" />
+    <Compile Include="Authentication\CustomAuthorizeAttribute.cs" />
+    <Compile Include="Authentication\ITokenManager.cs" />
+    <Compile Include="Authentication\TokenManager.cs" />
     <Compile Include="AutoRenterApiConfiguration.cs" />
+    <Compile Include="Commands\Login\GetUserByUsernameAndPassword.cs" />
+    <Compile Include="Commands\Login\IGetUserByUsernameAndPassword.cs" />
     <Compile Include="Commands\Media\GetMedia.cs" />
+    <Compile Include="Converters\MediaConverter.cs" />
     <Compile Include="Commands\Media\IGetMedia.cs" />
     <Compile Include="Commands\Media\ISaveMedia.cs" />
     <Compile Include="Commands\Media\SaveMedia.cs" />
@@ -192,6 +205,7 @@
     <Compile Include="Commands\Vehicle\IGetVehicle.cs" />
     <Compile Include="Commands\Vehicle\ISaveVehicle.cs" />
     <Compile Include="Commands\Vehicle\SaveVehicle.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MediaUploadController.cs" />
     <Compile Include="Controllers\MediaController.cs" />
     <Compile Include="Controllers\ReportsController.cs" />
@@ -200,7 +214,9 @@
     <Compile Include="Commands\IncentiveGroup\GetIncentiveGroup.cs" />
     <Compile Include="Commands\IncentiveGroup\IGetIncentiveGroupsForLocation.cs" />
     <Compile Include="Commands\IncentiveGroup\IGetIncentiveGroup.cs" />
+    <Compile Include="Converters\ConvertHttpRequestToVehicleModel.cs" />
     <Compile Include="Converters\HashConverter.cs" />
+    <Compile Include="Converters\IConvertHttpRequestToVehicleModel.cs" />
     <Compile Include="Converters\IncentiveGroupModelConverter.cs" />
     <Compile Include="Commands\IncentiveGroup\ISaveIncentiveGroup.cs" />
     <Compile Include="Commands\IncentiveGroup\SaveIncentiveGroup.cs" />
@@ -241,7 +257,7 @@
     <Compile Include="IErrorHandler.cs" />
     <Compile Include="Models\IncentiveGroupModel.cs" />
     <Compile Include="Models\LocationModel.cs" />
-    <Compile Include="Models\LocationVehicleModel.cs" />
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\MediaModel.cs" />
     <Compile Include="Models\ResultModel.cs" />
     <Compile Include="Models\StateModel.cs" />
@@ -257,7 +273,6 @@
     <Compile Include="Validators\IFileUploadValidator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Readme\Elmah.txt" />
     <Content Include="Global.asax" />
     <None Include="Properties\PublishProfiles\AutoRenterApi.pubxml" />
     <Content Include="Media\ImageMissing.png" />
