--- a/Api/packages.config
+++ b/Api/packages.config
@@ -7,7 +7,6 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
-  <package id="JWT" version="1.3.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
@@ -18,10 +17,12 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net452" />
@@ -29,6 +30,7 @@
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
