Correcting Azure connection

--- a/Api/Web.config
+++ b/Api/Web.config
@@ -15,6 +15,7 @@
   <appSettings>
     <add key="MaximumFileSizeInKb" value="200" />
     <add key="AcceptedFileTypes" value="jpg, gif, png, docx, pdf" />
+    <add key="IsAvailable" value="true" />    
     <add key="DisableAuthentication" value="true" />
     <add key="elmah.mvc.disableHandler" value="false" />
     <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
